???

  * Fixed: Resolution of relative URI "/" broken
      Thanks to Mo McRoberts for the patch!
  * Fixed: .errorCode could end up unset, previously
      Thanks to Radu Hociung for the patch!  (bug #16)
  * Fixed: Resolve use of non-POSIX "sed -r" used when building
     documentation  (bug #18)
     Thanks to Ryan Schmidt for reporting!
  * Fixed: Build DLL with -no-undefined on Windows
      Thanks to Michel Zou for the patch!  (bug #19)
  * Added: Command line tool "uriparse"
      Thanks to Radu Hociung for coding!  (feature request #3)
  * Soname: 1:15:0

2013-08-24 -- 0.7.9

  * Fixed: Error position ended up as NULL for some syntax errors.
      Thanks to Daniel Solano Gómez for the patch!  (bug #14)
  * Soname: 1:14:0

2013-05-13 -- 0.7.8

  * Fixed: Fix dissection of query string "q=hello&x=&y=" (bug #12)
      Thanks to Marc Novakowski for reporting!
  * Soname: 1:13:0

2012-04-05 -- 0.7.7

  * Fixed: Fix rejection of some valid characters for userinfo
      section, e.g. "http://%2Fuser:%2F21@host/" (bug #11)
  * Fixed: Fix rejection of valid double colon in userinfo
      section, e.g. "http://::@host/"
  * Soname: 1:12:0

2012-01-20 -- 0.7.6

  * Fixed: Qt Compressed Help file was not installed
  * Fixed: Shadow/VPATH build doc generation
  * Fixed: Compile error from Doxygen when configuring with
      neither --enable-doc nor --disable-doc
  * Fixed: Code documentation errors
      Thanks to Valentin Haenel for the patch!
  * Fixed: Fix include path in pkg-config, i.e. remove
      "/uriparser" suffix as uriparser's headers are meant to
      be included by statements like #include <uriparser/....> .
      Thanks to Philip de Nier for reporting!
  * Fixed: Compilation in context of Eclipse + Cygwin + wchar_t
      (bug #10)
      Thanks to Gary Mazzaferro for reporting!
  * Fixed: Selection of supported character widths at build
      time: <char *> or <wchar_t *> or both
  * Added: configure parameters to disable either character